Разделение ответственностей: security сильнее обособлен, добавлен RoleFactory

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       client-secret: ${GIGACHAT_CLIENT_SECRET}
       chat:
         options:
-          model: GigaChat-2-Pro
+          model: GigaChat-2
 
   output:
     ansi:
